--- a/docs/readme.mdx
+++ b/docs/readme.mdx
@@ -3,11 +3,13 @@ sidebar_position: 1
 sidebar_label: Introduction
 ---
 
-# OpenSRP 2 (FHIR Core)
+# OpenSRP
 
-### Introduction
+OpenSRP is a platform for delivering digital health services. It has been used in project ranging from single location research studies to national health systems caring for over a hundred million patients. This documentation covers the OpenSRP Android app, which is code-named "FHIR Core" throughout.
 
-OpenSRP 2 (FHIR Core) is a Kotlin application for delivering configurable,offline-capable, mobile-first healthcare project implementations from local community to national and international scale using FHIR and the WHO Smart Guidelines on Android.
+## Introduction
+
+FHIR Core is a Kotlin application for delivering configurable, offline-capable, mobile-first healthcare project implementations from local community to national and international scale using FHIR and the WHO Smart Guidelines on Android.
 
 FHIR Core is architected as a FHIR native digital health platform powered by Google's [Android FHIR SDK](https://github.com/google/android-fhir) and [HAPI FHIR](https://hapifhir.io/). FHIR Core users experience a module oriented design based on over a decade of real world experience implementing digital health projects with [OpenSRP](https://smartregister.org/). This repository contains the Android mobile application built to:
 
