add reasonable front page content

--- a/docs/android-app/readme.mdx
+++ b/docs/android-app/readme.mdx
@@ -20,6 +20,8 @@ For remote data storage and login, the mobile application requires:
 - A [Keycloak](https://www.keycloak.org/) server to manage identity, authentication, and authorization;
 - A [HAPI FHIR](https://hapifhir.io/) server to store operation and configuration data that includes the [HAPI FHIR to Keycloak integration](https://github.com/opensrp/hapi-fhir-keycloak).
 
+![OpenSRP the FHIR frontier logo](/img/fhircore.png)
+
 #### Programming Language
 
 Kotlin -[v1.7.10](https://kotlinlang.org/)
