--- a/docs/readme.mdx
+++ b/docs/readme.mdx
@@ -5,6 +5,14 @@ sidebar_label: Introduction
 
 # OpenSRP
 
-OpenSRP is a platform for delivering digital health services. It has been used in project ranging from single location research studies to national health systems caring for over a hundred million patients.
+OpenSRP is a platform for delivering digital health services. It has been used in projects ranging from single location research studies to national health systems caring for over a hundred million patients.
 
-![](/img/fhircore.png)
+The OpenSRP platform consists of three primary components that are documented here, these are the:
+
+1. [OpenSRP Android App](/android-app)
+1. [OpenSRP Admin Dashboard](/admin-dashboard)
+1. [OpenSRP Analytics Dashboard](/analytics-dashboard)
+
+In addition, OpenSRP relies on a number of other modular tools as described in the diagram below.
+
+![](/img/opensrp-platform-flow.png)
