--- a/android/engine/src/main/res/values-sw/strings.xml
+++ b/android/engine/src/main/res/values-sw/strings.xml
@@ -132,4 +132,5 @@
     <string name="dismiss">Ondoa</string>
     <string name="unsynced_resources">Zilizobakia Kwa Simu</string>
     <string name="all_data_synced">Zote zimesawazishwa</string>
+    <string name="invalid_offline_login_state">Usanidi wa mtumiaji unahitajika. Washa mtandao</string>
 </resources>
