--- a/docs/android-app/getting-started/readme.mdx
+++ b/docs/android-app/getting-started/readme.mdx
@@ -108,5 +108,6 @@ Refer to the following links for more details:
 To run the documentation locally navigate to the repository root directory and run:
 
 ```
+npm install
 npx docusaurus start
 ```
