Update register config documentation to use generic function

--- a/docs/android-app/configurations/user-interface/register-config.mdx
+++ b/docs/android-app/configurations/user-interface/register-config.mdx
@@ -24,7 +24,7 @@ Below is a JSON config that shows how to execute rules.Refer to working with rul
       "name": "under5",
       "condition": "true",
       "actions": [
-        "data.put('under5', dateService.addOrSubtractYearFromCurrentDate(5,'-'))"
+        "data.put('under5', dateService.addOrSubtractTimeUnitFromCurrentDate(5,'-','YEAR'))"
       ]
     }
   ]
