RW: move content around, add feature section

--- a/docs/readme.mdx
+++ b/docs/readme.mdx
@@ -1,18 +1,14 @@
 ---
-sidebar_position: 1
-sidebar_label: Introduction
+sidebar_position: 2
+sidebar_label: Technical Overview
 ---
 
-# OpenSRP
+# Technical Overview
 
 OpenSRP is a platform for delivering digital health services. It has been used in projects ranging from single location research studies to national health systems caring for over a hundred million patients.
 
-The OpenSRP platform consists of three primary components that are documented here, these are the:
+The Android app is primarily written in Kotlin​, architected as a FHIR-native platform, and powered by [Android FHIR SDK](https://github.com/google/android-fhir). Find OpenSRP on Github: [OpenSRP Android App](https://github.com/opensrp/fhircore), [OpenSRP Admin Dashboard](https://github.com/opensrp/web)
 
-1. [OpenSRP Android App](/android-app)
-1. [OpenSRP Admin Dashboard](/admin-dashboard)
-1. [OpenSRP Analytics Dashboard](/analytics-dashboard)
-
-In addition, OpenSRP relies on a number of other modular tools as described in the diagram below.
+The OpenSRP platform consists of three components: (1) [OpenSRP Android App](/android-app), (2) [OpenSRP Admin Dashboard](/admin-dashboard), and (3) [OpenSRP Analytics Dashboard](/analytics-dashboard). In addition, OpenSRP relies on a number of other modular tools as described in the diagram below.
 
 ![](/img/opensrp-platform-flow.png)
