--- a/docs/readme.mdx
+++ b/docs/readme.mdx
@@ -9,6 +9,6 @@ OpenSRP is a platform for delivering digital health services. It has been used i
 
 The Android app is primarily written in Kotlin​, architected as a FHIR-native platform, and powered by [Android FHIR SDK](https://github.com/google/android-fhir). Find OpenSRP on Github: [OpenSRP Android App](https://github.com/opensrp/fhircore), [OpenSRP Admin Dashboard](https://github.com/opensrp/web)
 
-The OpenSRP platform consists of three components: (1) [OpenSRP Android App](/android-app), (2) [OpenSRP Admin Dashboard](/admin-dashboard), and (3) [OpenSRP Analytics Dashboard](/analytics-dashboard). In addition, OpenSRP relies on a number of other modular tools as described in the diagram below.
+The OpenSRP platform consists of three components: (1) [OpenSRP Android App](/android-app), (2) [OpenSRP Admin Dashboard](/about-opensrp/admin-dashboard-features), and (3) OpenSRP Analytics Dashboard. In addition, OpenSRP relies on a number of other modular tools as described in the diagram below.
 
 ![](/img/opensrp-platform-flow.png)
