--- a/docs/android-app/configurations/user-interface/register-config.mdx
+++ b/docs/android-app/configurations/user-interface/register-config.mdx
@@ -126,10 +126,10 @@ A dataquery config to filter by practitionerId. For more info refer to dataquery
 
 ### Practitioner LAUNCH_PROFILE (Register and Profile use same type of Resource)
 #### Sample JSON
-Add your params at **SERVICE_CARD actions** section of practitioner_register_config.json
-Set the value of the `trigger` to `ON_CLICK`.
-Set the value of `workflow` to `LAUNCH_PROFILE`
-Set the value of `id` to the id of the profile configuration to be launched e.g `practitionerProfile`
+Add your params at **SERVICE_CARD actions** section of practitioner_register_config.json  
+Set the value of the `trigger` to `ON_CLICK`.  
+Set the value of `workflow` to `LAUNCH_PROFILE`  
+Set the value of `id` to the id of the profile configuration to be launched e.g `practitionerProfile`  
 The default implementation opens the profile using the `id` of the base resource used to load the register row
 #### Sample JSON
 ``` json
@@ -156,13 +156,13 @@ The default implementation opens the profile using the `id` of the base resource
 ```
 
 2. Add your params at **SERVICE_CARD actions** section of task_register_config.json
-   Set the value of the `trigger` to `ON_CLICK`.
-   Set the value of `workflow` to `LAUNCH_PROFILE`
-   Set the value of `id` to the id of the profile configuration to be launched e.g `practitionerProfile`
-   Add an action parameter with the following values
-      `paramType` set to `RESOURCE_ID`. This allows the user to specify the id of the resource used to open the profile
-      `key` user defined value for the key e.g `patientId`
-      `value` Set the value of the resource id to be used to open the profile
+   Set the value of the `trigger` to `ON_CLICK`.  
+   Set the value of `workflow` to `LAUNCH_PROFILE`  
+   Set the value of `id` to the id of the profile configuration to be launched e.g `practitionerProfile`  
+   Add an action parameter with the following values  
+      - `paramType` set to `RESOURCE_ID`. This allows the user to specify the id of the resource used to open the profile  
+      - `key` user defined value for the key e.g `patientId`  
+      - `value` Set the value of the resource id to be used to open the profile  
 #### Sample JSON
 ``` json
         {
