--- a/docs/android-app/configurations/user-interface/register-config.mdx
+++ b/docs/android-app/configurations/user-interface/register-config.mdx
@@ -124,6 +124,62 @@ A dataquery config to filter by practitionerId. For more info refer to dataquery
         }
 ```
 
+### Practitioner LAUNCH_PROFILE (Register and Profile use same type of Resource)
+#### Sample JSON
+Add your params at **SERVICE_CARD actions** section of practitioner_register_config.json  
+Set the value of the `trigger` to `ON_CLICK`.  
+Set the value of `workflow` to `LAUNCH_PROFILE`  
+Set the value of `id` to the id of the profile configuration to be launched e.g `practitionerProfile`  
+The default implementation opens the profile using the `id` of the base resource used to load the register row
+#### Sample JSON
+``` json
+             {
+               "trigger": "ON_CLICK",
+               "workflow": "LAUNCH_PROFILE",
+               "id": "practitionerProfile"
+             }
+```
+
+### Task Register launch Patient Profile (Register and Profile use different Resource types)
+#### Sample JSON
+1. Write rules to extract the data you need.
+``` json
+"rules":[
+            {
+                "name": "patientId",
+                "condition": "true",
+                "actions": [
+                    "data.put('patientId', fhirPath.extractValue(Patient.get(0), \"Patient.id\"))"
+                ]
+             }
+  ]
+```
+
+2. Add your params at **SERVICE_CARD actions** section of task_register_config.json
+   Set the value of the `trigger` to `ON_CLICK`.  
+   Set the value of `workflow` to `LAUNCH_PROFILE`  
+   Set the value of `id` to the id of the profile configuration to be launched e.g `practitionerProfile`  
+   Add an action parameter with the following values  
+      - `paramType` set to `RESOURCE_ID`. This allows the user to specify the id of the resource used to open the profile  
+      - `key` user defined value for the key e.g `patientId`  
+      - `value` Set the value of the resource id to be used to open the profile  
+#### Sample JSON
+``` json
+        {
+            "trigger": "ON_CLICK",
+            "workflow": "LAUNCH_PROFILE",
+            "id": "patientProfile",
+            "params": [
+                {
+                    "paramType": "RESOURCE_ID",
+                    "key": "patientId",
+                    "value": "@{patientId}"
+                }
+            ]
+        }
+```
+
+
 ## Dynamic data pass between registers config properties
 
 |Property | Description | Required | Default |
