RW: add content about Ona and images

--- a/docs/project-information/readme.mdx
+++ b/docs/project-information/readme.mdx
@@ -7,7 +7,9 @@ sidebar_label: Project Information
 
 ### Background
 
-As an organization we fundamentally believe technology can play a critical role to empower and augment the capabilities of frontline health workers to help them serve. This is critical to overcoming the significant shortage in highly skilled medical professionals that most countries face. Digitally empowered frontline health workers are essential if we want to achieve a more universal, equitable and affordable access to health services.
+As an organization, Ona fundamentally believes technology can play a critical role to empower and augment the capabilities of frontline health workers to help them serve. This is critical to overcoming the significant shortage in highly skilled medical professionals that most countries face. Digitally empowered frontline health workers are essential if we want to achieve a more universal, equitable and affordable access to health services.
+
+![](/img/background.jpg)
 
 Affordable, basic health care such as child immunizations, maternal care, malaria, HIV, and family planning in low resource countries can:
 
@@ -31,7 +33,7 @@ The paper register is a common health team tool in low resource countries. These
 ![](/img/paper-registers.jpg)
 *Health workers in Zambia recording health information in multiple places while a crowd of new mothers watches and waits.*
 
-We discovered that a major obstacle in the successful adoption of technology is the first few months of adapting and learning a new platform.
+In our work, Ona discovered that a major obstacle in the successful adoption of technology is the first few months of adapting and learning a new platform.
 
 We used the format of a paper register, which was easy to scan and understand, and upgraded it to be "smart". First, we added "tasks" which are assigned to-do's for health practitioners, which helps them track when services are due and easily see who is overdue. Next, we added some simple checks to make sure data was entered correctly, and offered solutions and decision support for health issues that arise.
 
@@ -48,6 +50,12 @@ The World Health Organization (WHO) [SMART — Standards-based, Machine-readable
 FHIR, or [Fast Healthcare Interoperability Resources](https://hl7.org/fhir/), is a data standard evolved from HL7, which pioneered the field of health data exchange. Importantly, since its introduction a decade ago, it has become the globally accepted standard describing how to represent and exchange health data.
 
 ![](/img/fhir-resources-list.jpg)
+
+### Who builds OpenSRP?
+
+Ona created OpenSRP in 2013. Since then, Ona has led the design and development of OpenSRP, with key contributions from individuals and partners around the world.
+
+![](/img/opensrp-team.jpg)
 
 ### Further Reading
 
