MB: added sync insights

--- a/docs/features/app-features/readme.mdx
+++ b/docs/features/app-features/readme.mdx
@@ -3,7 +3,9 @@ sidebar_position: 2
 sidebar_label: App Features
 ---
 
-# App Features (release v0.2.3–0.2.4)
+# App Features 
+
+As of release [**v0.2.4**](https://github.com/opensrp/fhircore/releases/tag/v0.2.4-opensrp) (July 18th, 2023)
 
 ## Patient and family registration
 
@@ -113,6 +115,10 @@ OpenSRP supports multiple languages through translatable built in content and us
 OpenSRP supports peer-to-peer data transfer using “WiFi-direct” technology so that 2 off-line devices can connect to each other and synchronize information from one device to another. The receiving device will only be able to view devices it has permission to view, even though it may receive and store in its device database information it does not have permission to view.
 
 ![](/img/p2p.png)
+
+## Sync Insights
+
+Through sync insights OpenSRP makes it possible to understand which data has been synced back to the remote server and what data remains unsynced on your device.  These insights help provide assurance data is synced securely when it's should. It also helps the health worker navigate / troubleshoot data connectivity issues and is invaluable to teams when providing remote support.
 
 ## Roadmap for 2023–2024
 - Editing submitted form data
